<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="2dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="60dp"
            tools:ignore="RtlSymmetry">

            <Button
                android:id="@+id/word"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:drawableStart="@drawable/ic_glasses"
                android:drawableLeft="@drawable/ic_glasses"
                android:text="@string/memory_word"
                android:textColor="#80E91E63"
                android:textSize="24sp" />

            <Button
                android:id="@+id/voice"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:drawableStart="@drawable/ic_voice"
                android:drawableLeft="@drawable/ic_voice"
                android:text="@string/cir_voice"
                android:textColor="#80E91E63"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/article"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:drawableStart="@drawable/ic_article"
                android:drawableLeft="@drawable/ic_article"
                android:text="@string/good_article"
                android:textColor="#80E91E63"
                android:textSize="24sp" />

            <Button
                android:id="@+id/mall"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:drawableStart="@drawable/ic_mall"
                android:drawableLeft="@drawable/ic_mall"
                android:text="@string/app_mall"
                android:textColor="#80E91E63"
                android:textSize="24sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:configChanges="orientation|screenSize|keyboardHidden"
            android:paddingTop="5dp"
            android:screenOrientation="portrait"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#00FF0000" />

    </LinearLayout>
</layout>