<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.bjtu.wanciwang.view.login.LogInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99404348"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                tools:ignore="RtlHardcoded,RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/welcome"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99000000"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="50dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/telephone_number"
                        android:textColor="#9F9FA0"
                        android:textColorHint="#9F9FA0" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/countrycode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="5dp"
                            android:text="+86"
                            android:textColor="#9F9FA0"
                            android:textColorHint="#9F9FA0"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="30dip"
                            android:layout_marginLeft="13dp"
                            android:background="#83738F" />

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="50dp"
                            android:background="@null"
                            android:hint="@string/telephone"
                            android:textColor="#9F9FA0"
                            android:textColorHint="#9F9FA0" />

                    </LinearLayout>


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="5dp"
                    android:background="#83738F" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/password_label"
                        android:textColor="#9F9FA0"
                        android:textColorHint="#9F9FA0" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:autofillHints=""
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#9F9FA0"
                        android:textColorHint="#9F9FA0" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99404348"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="30dp">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="50px">

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/buttonstyle"
                    android:text="登录"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="55dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/forgetpass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/forget_password"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/log_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="120dp"
                        android:text="@string/log_in"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <View
                    android:layout_width="70dp"
                    android:layout_height="1dip"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="#83738F" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="第三方登录"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="70dp"
                    android:layout_height="1dip"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="5dp"
                    android:background="#83738F" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp">

                <ImageButton
                    android:id="@+id/wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:background="#00FF0000"
                    app:srcCompat="@drawable/ic_wechat" />

                <ImageButton
                    android:id="@+id/qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FF0000"
                    app:srcCompat="@drawable/ic_qq" />

                <ImageButton
                    android:id="@+id/weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:background="#00FF0000"
                    app:srcCompat="@drawable/ic_weibo" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:ignore="UselessParent">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="#00000000" />
    </RelativeLayout>
</RelativeLayout>

